--- a/index.html
+++ b/index.html
@@ -703,10 +703,10 @@ margin-left:20%
             <div class="row mt-3">
                 <div class="col-2">
                     <div class="row">
-                        <span class="header-text hover-text">//01. &#160;&lt;Home/&gt;</span>
+                        <span class="header-text hover-text">//01. &lt;Home/&gt;</span>
                     </div>
                     <div class="row mt-3">
-                        <span class="header-text hover-text">//02. &#160;&lt;Portfolio/&gt;</span>
+                        <span class="header-text hover-text">//02. &lt;Portfolio/&gt;</span>
                     </div>
                 </div>
                 <div class="col-8">
@@ -714,10 +714,10 @@ margin-left:20%
                 </div>
                 <div class="col-2">
                     <div class="row">
-                        <span class="header-text hover-text">//03. &#160;&lt;Work/&gt;</span>
+                        <span class="header-text hover-text">//03. &lt;Work/&gt;</span>
                     </div>
                     <div class="row mt-3">
-                        <span class="header-text hover-text">//04. &#160;&lt;Contact/&gt;</span>
+                        <span class="header-text hover-text">//04. &lt;Contact/&gt;</span>
                     </div>
                 </div>
             </div>
