--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         position: absolute;
         top: 33%;
         left: 67%;
-        -webkit-transform: translate(-51%, -50%);
+        /* -webkit-transform: translate(-51%, -50%); */
         -moz-transform: translate(-51%, -50%);
         -ms-transform: translate(-51%, -50%);
         -o-transform: translate(-51%, -50%);
